wordpress skills item

--- a/index.html
+++ b/index.html
@@ -334,6 +334,15 @@
               </ul>
             </div>
 
+            <div title="webHost" data-scroll class="skills-item">
+              <div id="webHost" class="icon">
+                <i class="fa-brands fa-wordpress"></i>
+              </div>
+              <h2>WordPress</h2>
+              <ul>
+                <li>e-commerce site</li>
+              </ul>
+            </div>
             <div title="Customer Care" data-scroll class="skills-item">
               <div class="icon">
                 <i class="fas fa-headset"></i>
