--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
       <div data-scroll class="work-item">
         <div class="work-title">
         <h2 >Orich Trading & projects&trade;</h2>
-        <a href="https://orich-trading-projects.netlify.app/" target="_blank">orichtrading-projects.netlify.app/</a>
+        <p>Full Responsive Website</p>
       </div>
         <figure>
           <img src="img/orich-min.jpg" alt="Orich trading & projects">
@@ -402,7 +402,7 @@
       <div data-scroll class="work-item">
         <div class="work-title">
         <h2>Munch Up&trade;</h2>
-        <a href="https://munch-up.netlify.app/" target="_blank" >munch-up.netlify.app/</a>
+        <p>Landing Page</p>
       </div>
         <figure>
           <img src="img/munch-logo-min.jpg" alt="Munch Up-logo">
@@ -413,7 +413,7 @@
       <div data-scroll class="work-item">
         <div class="work-title">
         <h2 class="work-title">Ngoveni Construction&trade;</h2>
-        <a href="https://ngoveni-construction.netlify.app/" target="_blank" >ngoveni-construction.netlify.app/</a>
+        <p>One Page website</p>
       </div>
         <figure>
           <img src="img/mkansi-min.png" alt="Orich trading & projects">
@@ -423,13 +423,24 @@
       <!-- THATO -->
       <div data-scroll class="work-item">
         <div class="work-title">
-        <h2 class="work-title">Thato Technical Drawings&copy;</h2>
-        <a href="https://thato-technical-drawings.netlify.app/" target="_blank" >thato-tech-drawings.netlify.app/</a>
-      </div>
+          <h2 class="work-title">Thato Technical Drawings&copy;</h2>
+          <p>One page landing page</p>
+        </div>
         <figure>
           <img src="img/thato2-logo-min.png" alt="Orich trading & projects">
         </figure>
         <a class="view-site-btn" href="https://thato-technical-drawings.netlify.app/" target="_blank">view website</a>
+      </div>
+      <!-- WORDPRESS -->
+      <div data-scroll class="work-item">
+        <div class="work-title">
+          <h2 class="work-title">WordPress</h2>
+          <p>WordPress e-commerce website</p>
+        </div>
+        <figure>
+          <img src="img/shakexsempe-logo.png" alt="Shakex Sempe WordPress logo">
+        </figure>
+        <a class="view-site-btn" href="https://www.shakex.co.za" target="_blank">view website</a>
       </div>
     </div>
   </div>
