intersection observer: header

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
   <!--Header-->
   <header id="header">
-    <div class="header container">
+    <div class="header">
       <nav id="navbar">
         <div class="brand">
           <a href="#home" title="Shakex Sempe navbar logo" class="scroll-link">
@@ -54,7 +54,7 @@
           </a>
         </div>
         <div class="nav-list">
-          <div class="hamburger no-pulse">
+          <div class="hamburger">
             <div class="bar"></div>
           </div>
           <div class="links-container">
