--- a/index.html
+++ b/index.html
@@ -206,7 +206,8 @@
               <h2>Javascript</h2>
               <ul>
                 <li>Basic Algorithm Scripting</li>
-                <li>ES6 Fundamentals.</li>
+                <li>ES6 Fundamentals</li>
+                <li>Intersection Observer</li>
                 <li>JSon</li>
               </ul>
               <p> </p>
