--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
   </section>
   <!--End of Skills section-->
 <!-- WORK / PORTFOLIO -->
-<section id="work"> 
+<section id="work" class="link-section"> 
   <div class="work">
     <div class="work-header">
       <h1 data-text="projects" class="section-title">pro<span>j</span>ects</h1>
