--- a/index.html
+++ b/index.html
@@ -437,6 +437,17 @@
         <h1 data-text="projects" class="section-title">pro<span>j</span>ects</h1>
       </div>
       <div class="work-items">
+        <!-- kSAUCE -->
+        <div data-scroll class="work-item">
+          <div class="work-title">
+            <h2>K'sauce&trade;</h2>
+            <p>Full Responsive Website</p>
+          </div>
+          <figure>
+            <img src="img/ksauce.jpg" alt="k'Sauce">
+          </figure>
+          <a class="view-site-btn" href="https://shakexsempe.github.io/kutlwano-hot-sauce/" target="_blank">view website</a>
+        </div>
         <!-- ORICH -->
         <div data-scroll class="work-item">
           <div class="work-title">
