--- a/index.html
+++ b/index.html
@@ -438,9 +438,9 @@
       </div>
       <div class="work-items">
         <!-- kSAUCE -->
-        <div data-scroll class="work-item">
+        <div data-scroll class="work-item ksauce">
           <div class="work-title">
-            <h2>K'sauce&trade;</h2>
+            <h2>K'Sauce&trade;</h2>
             <p>Full Responsive Website</p>
           </div>
           <figure>
