skills setion datascroll

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       <div class="skills-header">
         <h1 title="skills" data-text="skills" class="section-title">Sk<span>i</span>lls</h1>
       </div>
-      <div data-scroll class="skills-top">
+      <div class="skills-top">
         <div class="skills-info">
           <p>
             I'm a Front-End Web Developer focused on Responsive Web Design and User Experience.<br>
@@ -165,7 +165,7 @@
         </div>
       </div>
       <!--Dropdown-->
-      <div class="dropdown">
+      <div data-scroll class="dropdown">
         <button onclick="dropdown()" title="full skillset" class="dropbtn">My Skills</button>
         <div id="myDropdown" class="dropdown-content">
 
