--- a/index.html
+++ b/index.html
@@ -439,9 +439,11 @@
             <p>Full Responsive Website</p>
           </div>
           <figure>
-            <img src="img/ksauce.jpg" alt="k'Sauce">
+            <a href="https://shakexsempe.github.io/kutlwano-hot-sauce/" target="_blank" title="Github Repository">
+              <img src="img/ksauce.jpg" alt="k'Sauce">
+            </a>
           </figure>
-          <a class="view-site-btn" href="https://shakexsempe.github.io/kutlwano-hot-sauce/" target="_blank">view website</a>
+          <a class="view-site-btn" href="https://ksauce.netlify.app/" target="_blank">view website</a>
         </div>
         <!-- ORICH -->
         <div data-scroll class="work-item">
@@ -450,9 +452,11 @@
             <p>Full Responsive Website</p>
           </div>
           <figure>
-            <img src="img/orich-min.jpg" alt="Orich trading & projects">
+            <a href="https://shakexsempe.github.io/orich-trading/" target="_blank" title="Github Repository">
+            <img src="img/orich-min.jpg" alt="Orich Trading & Projects">
+          </a>
           </figure>
-          <a class="view-site-btn" href="https://shakexsempe.github.io/orich-trading/" target="_blank">view website</a>
+          <a class="view-site-btn" href="https://orich-trading-projects.netlify.app/" target="_blank">view website</a>
         </div>
         <!-- MUNCH UP -->
         <div data-scroll class="work-item">
@@ -461,18 +465,22 @@
             <p>Landing Page</p>
           </div>
           <figure>
+            <a href="https://shakexsempe.github.io/munch-up/" target="_blank" title="Github Repository">
             <img src="img/munch-logo-min.jpg" alt="Munch Up-logo">
+          </a>
           </figure>
           <a class="view-site-btn" href="https://munch-up.netlify.app/" target="_blank">view website</a>
         </div>
-        <!-- NGOVENI -->
+        <!-- MAGOVENI -->
         <div data-scroll class="work-item">
           <div class="work-title">
             <h2 class="work-title">Magoveni Construction&trade;</h2>
             <p>One Page website</p>
           </div>
           <figure>
-            <img src="img/mkansi-min.png" alt="Orich trading & projects">
+            <a href="https://shakexsempe.github.io/ngoveni-construction/" target="_blank" title="Github Repository">
+              <img src="img/mkansi-min.png" alt="Orich trading & projects">
+            </a>
           </figure>
           <a class="view-site-btn" href="https://ngoveni-construction.netlify.app/" target="_blank">view website</a>
         </div>
@@ -483,12 +491,14 @@
             <p>One page landing page</p>
           </div>
           <figure>
-            <img src="img/thato2-logo-min.png" alt="Orich trading & projects">
+            <a href="https://shakexsempe.github.io/thato-tech-drawings/" target="_blank" title="Github Repository">
+              <img src="img/thato2-logo-min.png" alt="Orich trading & projects">
+            </a>
           </figure>
           <a class="view-site-btn" href="https://thato-technical-drawings.netlify.app/" target="_blank">view website</a>
         </div>
         <!-- WORDPRESS -->
-        <div data-scroll class="work-item">
+        <!-- <div data-scroll class="work-item">
           <div class="work-title">
             <h2 class="work-title">WordPress</h2>
             <p>WordPress e-commerce website</p>
@@ -497,7 +507,7 @@
             <img src="img/shakexsempe-logo.png" alt="Shakex Sempe WordPress logo">
           </figure>
           <a class="view-site-btn" href="https://www.shakex.co.za" target="_blank">view website</a>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
