work item title

--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
         <div data-scroll class="work-item ksauce">
           <div class="work-title">
             <h2>K'Sauce&trade;</h2>
-            <p>Full Responsive Website</p>
+            <p>5 page Responsive Website</p>
           </div>
           <figure>
             <a href="https://shakexsempe.github.io/kutlwano-hot-sauce/" target="_blank" title="Github Repository">
@@ -449,7 +449,7 @@
         <div data-scroll class="work-item">
           <div class="work-title">
             <h2>Orich Trading & projects&trade;</h2>
-            <p>Full Responsive Website</p>
+            <p>5 page Responsive Website</p>
           </div>
           <figure>
             <a href="https://shakexsempe.github.io/orich-trading/" target="_blank" title="Github Repository">
