--- a/index.html
+++ b/index.html
@@ -136,6 +136,9 @@
           <span style="--i:6;">x</span>
         </button>
       </div>
+      <div class="slogan">
+        <p>Accessible & Immersives web designs</p>
+      </div>
     </div>
     <!-- <div id="cta">
       <a class="cta" title="View my projects" href="#work">view my work</a>
