--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         </button>
       </div>
       <div class="slogan">
-        <p>Accessible & Immersives web designs</p>
+        <p>Accessible & Immersive websites</p>
       </div>
     </div>
     <!-- <div id="cta">
