--- a/index.html
+++ b/index.html
@@ -137,7 +137,10 @@
         </button>
       </div>
       <div class="slogan">
-        <p>Accessible & Immersive websites</p>
+        <!-- <p>Accessible & Immersive websites</p> -->
+        <p>Accessible, Immersive & Engaging</p>
+        <!-- <p>websites and Landing Pages</p> -->
+        <p>responsive websites</p>
       </div>
     </div>
     <!-- <div id="cta">
