--- a/index.html
+++ b/index.html
@@ -137,10 +137,8 @@
         </button>
       </div>
       <div class="slogan">
-        <!-- <p>Accessible & Immersive websites</p> -->
         <p>Accessible, Immersive & Engaging</p>
-        <!-- <p>websites and Landing Pages</p> -->
-        <p>responsive websites</p>
+        <p><a href="#menu">responsive websites</a></p>
       </div>
     </div>
     <!-- <div id="cta">
