skills-top font-size

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   </header>
   <!--End of Header-->
 
-  <!--Hero Section-->
+  <!--HERO-->
   <section id="home" class="section welcome-section">
     <div class="hero container">
       <div id="hero-h1">
@@ -145,8 +145,20 @@
       <a class="cta" title="View my projects" href="#work">view my work</a>
     </div> -->
   </section>
-  <!-- End of Hero Section-->
-
+  <!-- END OF HERO-->
+  <!--  MENU -->
+  <!-- <section id="menu">
+    <div class="menu-section" id="menu-1">
+      <h2>Accessible</h2>
+    </div>
+    <div class="menu-section" id="menu-2">
+      <h2>Immersive</h2>
+    </div>
+    <div class="menu-section" id="menu-3">
+      <h2>Engaging</h2>
+    </div>
+  </section> -->
+  <!--  END OF MENU -->
   <!--Skills section-->
   <section class="link-section" id="skills">
     <div class="skills container">
