--- a/index.html
+++ b/index.html
@@ -147,19 +147,57 @@
   </section>
   <!-- END OF HERO-->
   <!--  MENU -->
-  <!-- <section id="menu">
+  <section id="menu">
     <div class="menu-section" id="menu-1">
-      <h2>Accessible</h2>
+      <div class="menu-title">
+        <h2>Accessible</h2>
+        <h3>HTML semantic markup</h3>
+      </div>
+      <div class="menu-content">
+        <p>Lorem ipsum  aperiam natus vel ad repellendus distinctio iure dignissimos unde consequatur. Alias quam maiores porro blanditiis laudantium dolores delectus nisi dicta!       
+        </p>
+      </div>
+      <div class="menu-cta">
+        <a class="btn btn-enquiry" href="forms/form.html">make enquiry</a>
+        <a class="btn btn-view" href="#work">make enquiry</a>
+        <a class="btn btn-page" href="#menu-2">CSS</a>
+      </div>
     </div>
+    <!-- CSS MENU -->
     <div class="menu-section" id="menu-2">
-      <h2>Immersive</h2>
+      <div class="menu-title">
+        <h2>Immersive</h2>
+        <h3>SASS preprocessed CSS5</h3>
+      </div>
+      <div class="menu-content">
+        <p>Lorem ipsum  aperiam natus vel ad repellendus distinctio iure dignissimos unde consequatur. Alias quam maiores porro blanditiis laudantium dolores delectus nisi dicta!       
+        </p>
+      </div>
+      <div class="menu-cta">
+        <a class="btn btn-enquiry" href="forms/form.html">make enquiry</a>
+        <a class="btn btn-view" href="#work">make enquiry</a>
+        <a class="btn btn-page" href="#menu-3">javascript</a>
+      </div>
     </div>
+    <!-- JAVASCRIPT MENU -->
     <div class="menu-section" id="menu-3">
-      <h2>Engaging</h2>
+      <div class="menu-title">
+        <h2>Engaging</h2>
+        <h3>Javascript algorithms</h3>
+      </div>
+      <div class="menu-content">
+        <p>Lorem ipsum  aperiam natus vel ad repellendus distinctio iure dignissimos unde consequatur. Alias quam maiores porro blanditiis laudantium dolores delectus nisi dicta!       
+        </p>
+      </div>
+      <div class="menu-cta">
+        <a class="btn btn-enquiry" href="forms/form.html">make enquiry</a>
+        <a class="btn btn-view" href="#work">make enquiry</a>
+        <a class="btn btn-page" href="#skills">skills</a>
+      </div>
     </div>
-  </section> -->
+  </section>
   <!--  END OF MENU -->
-  <!--Skills section-->
+  <!-- SKILLS SECTION-->
   <section class="link-section" id="skills">
     <div class="skills container">
       <div class="skills-header">
@@ -440,7 +478,7 @@
     </div>
 
   </section>
-  <!--End of Skills section-->
+  <!--END OF SKILLS SECTION-->
   <!-- WORK / PORTFOLIO -->
   <section id="work" class="link-section">
     <div class="work">
@@ -527,7 +565,7 @@
       </div>
     </div>
   </section>
-  <!-- padding section -->
+  <!-- PADDING SECTION -->
   <div id="projects-pad" class="section-pad pad-intro">
     <figure data-scroll>
       <a title="github contribution activity" href="#projects">
@@ -535,8 +573,8 @@
       </a>
     </figure>
   </div>
-  <!-- end of padding section -->
-  <!--Projects Section-->
+  <!-- END OF PADDING SECTION -->
+  <!--PROJECTS SECTION-->
   <section class="link-section" id="projects">
     <div class="projects container">
       <div class="projects-header">
@@ -548,12 +586,10 @@
       </div>
     </div>
   </section>
-  <!--End of Projects Section-->
+  <!-- END OF PROJECTS-->
 
-  <!--About Section-->
+  <!-- ABOUT SECTION-->
   <section class="link-section" id="about">
-
-    <!-- end of padding section -->
     <div id="about-target" class="about container">
       <div class="col-right">
         <div class="about-header">
@@ -604,14 +640,14 @@
       </div>
     </div>
   </section>
-  <!--End of About Section-->
-  <!-- padding section -->
+  <!--END OF ABOUT SECTION-->
+  <!-- PADDING SECTION -->
   <div class="section-pad pad-me">
     <figure data-scroll>
       <img src="img/me-min.jpg" loading="lazy" alt="Boitumelo Sempe">
     </figure>
   </div>
-  <!--Contact Section-->
+  <!-- CONTACT SECTION-->
   <section class="link-section" id="contact">
 
     <div class="contact container">
@@ -669,9 +705,9 @@
     </div>
     <!-- end of padding section -->
   </section>
-  <!--End of Contact Section-->
+  <!--END OF CONTACT SECTION-->
 
-  <!--Footer-->
+  <!-- FOOTER -->
   <section class="link-section" id="footer">
     <div class="footer container">
 
@@ -778,7 +814,7 @@
     </a>
     <!--end of back to top button-->
   </section>
-  <!--End of Footer-->
+  <!-- END OF FOOTER-->
 
   <script src="js/app.js"></script>
   <script src="js/projects.js"></script>
