removed scroll padding

--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
     </div>
   </section>
   <!--  END OF MENU -->
+  <main id="main">
   <!-- SKILLS SECTION-->
   <section class="link-section" id="skills">
     <div class="skills container">
@@ -706,7 +707,7 @@
     <!-- end of padding section -->
   </section>
   <!--END OF CONTACT SECTION-->
-
+</main>
   <!-- FOOTER -->
   <section class="link-section" id="footer">
     <div class="footer container">
