--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@
   <!--HERO-->
   <section id="home" class="section welcome-section">
     <div class="hero container">
+      <div class="hero-bg">
+        <img src="img/massimiliano-morosinotto-STKcS9ojYHU-unsplash-min.jpg" loading="lazy" alt="">
+      </div>
       <div id="hero-h1">
         <h2>
           <span style="--s:1">My</span>
