footer inside main

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <div class="menu-section" id="menu-1">
       <div class="menu-title">
         <h2>Accessible</h2>
-        <h3>HTML semantic markup</h3>
+        <h3>HTML 5 & SEO </h3>
       </div>
       <div class="menu-content">
         <p>Lorem ipsum  aperiam natus vel ad repellendus distinctio iure dignissimos unde consequatur. Alias quam maiores porro blanditiis laudantium dolores delectus nisi dicta!       
@@ -710,7 +710,6 @@
     <!-- end of padding section -->
   </section>
   <!--END OF CONTACT SECTION-->
-</main>
   <!-- FOOTER -->
   <section class="link-section" id="footer">
     <div class="footer container">
@@ -819,6 +818,8 @@
     <!--end of back to top button-->
   </section>
   <!-- END OF FOOTER-->
+</main>
+  
 
   <script src="js/app.js"></script>
   <script src="js/projects.js"></script>
