menu-section content

--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@
   <section id="menu">
     <div class="menu-section" id="menu-1">
       <div class="menu-title">
-        <h2>Accessible</h2>
+        <h2>Web Accessibility</h2>
         <h3>HTML 5 & SEO </h3>
       </div>
       <div class="menu-content">
-        <p>Lorem ipsum  aperiam natus vel ad repellendus distinctio iure dignissimos unde consequatur. Alias quam maiores porro blanditiis laudantium dolores delectus nisi dicta!       
+        <p>Semantic HTML 5 semantic markup and on-page SEO techniques      
         </p>
       </div>
       <div class="menu-cta">
@@ -170,10 +170,11 @@
     <div class="menu-section" id="menu-2">
       <div class="menu-title">
         <h2>Immersive</h2>
-        <h3>SASS preprocessed CSS5</h3>
+        <h3>SASS preprocessed CSS3</h3>
       </div>
       <div class="menu-content">
-        <p>Lorem ipsum  aperiam natus vel ad repellendus distinctio iure dignissimos unde consequatur. Alias quam maiores porro blanditiis laudantium dolores delectus nisi dicta!       
+        <p>
+          CSS3 involves using the Box model, border-radiuses, box shadows, animations & transitions to render various layouts
         </p>
       </div>
       <div class="menu-cta">
@@ -189,7 +190,9 @@
         <h3>Javascript algorithms</h3>
       </div>
       <div class="menu-content">
-        <p>Lorem ipsum  aperiam natus vel ad repellendus distinctio iure dignissimos unde consequatur. Alias quam maiores porro blanditiis laudantium dolores delectus nisi dicta!       
+        <p>
+          The Javascript Document Object Model uses the to dynamically access and update the content, structure, and style of a document.
+          JS allows us to make engaging pages using key elements of the language such Event Listeners, Callback functions.
         </p>
       </div>
       <div class="menu-cta">
