test: menu section images

--- a/index.html
+++ b/index.html
@@ -151,7 +151,31 @@
   <!-- END OF HERO-->
   <!--  MENU -->
   <section id="menu">
+    <!-- RESPONSIVE -->
     <div class="menu-section" id="menu-1">
+      <div class="menu-img">
+        <img src="img/altumcode-U0tBTn8UR8I-unsplash.jpg" alt="Responsive devices">
+      </div>
+      <div class="menu-title">
+        <h2>responsive Web design</h2>
+        <h3>HTML 5 & CSS 3 </h3>
+      </div>
+      <div class="menu-content">
+        <p>
+          Websites that look good on desktops, tablets, and phones.      
+        </p>
+      </div>
+      <div class="menu-cta">
+        <a class="btn btn-enquiry" href="forms/form.html">make enquiry</a>
+        <a class="btn btn-view" href="#work">make enquiry</a>
+        <a class="btn btn-page" href="#menu-2">CSS</a>
+      </div>
+    </div>
+    <!-- HTML 5 -->
+    <div class="menu-section" id="menu-2">
+      <div class="menu-img">
+        <img src="img/howard-bouchevereau-RSCirJ70NDM-unsplash.jpg" alt="Responsive devices">
+      </div>
       <div class="menu-title">
         <h2>Web Accessibility</h2>
         <h3>HTML 5 & SEO </h3>
@@ -163,11 +187,14 @@
       <div class="menu-cta">
         <a class="btn btn-enquiry" href="forms/form.html">make enquiry</a>
         <a class="btn btn-view" href="#work">make enquiry</a>
-        <a class="btn btn-page" href="#menu-2">CSS</a>
+        <a class="btn btn-page" href="#menu-3">CSS</a>
       </div>
     </div>
     <!-- CSS MENU -->
-    <div class="menu-section" id="menu-2">
+    <div class="menu-section" id="menu-3">
+      <div class="menu-img">
+        <img src="img/nadine-shaabana-0xD40qm07X0-unsplash-min.jpg" alt="Responsive devices">
+      </div>
       <div class="menu-title">
         <h2>Immersive</h2>
         <h3>SASS preprocessed CSS3</h3>
@@ -180,25 +207,27 @@
       <div class="menu-cta">
         <a class="btn btn-enquiry" href="forms/form.html">make enquiry</a>
         <a class="btn btn-view" href="#work">make enquiry</a>
-        <a class="btn btn-page" href="#menu-3">javascript</a>
+        <a class="btn btn-page" href="#menu-4">javascript</a>
       </div>
     </div>
     <!-- JAVASCRIPT MENU -->
-    <div class="menu-section" id="menu-3">
+    <div class="menu-section" id="menu-4">
+      <div class="menu-img">
+        <img src="img/walling-XLqiL-rz4V8-unsplash.jpg" alt="Responsive devices">
+      </div>
       <div class="menu-title">
         <h2>Engaging</h2>
         <h3>Javascript algorithms</h3>
       </div>
       <div class="menu-content">
         <p>
-          The Javascript Document Object Model uses the to dynamically access and update the content, structure, and style of a document.
-          JS allows us to make engaging pages using key elements of the language such Event Listeners, Callback functions.
+          Javascript allows us to make engaging pages by using Document Object Model uses the to dynamically access and update the content, structure, and style of a document.
         </p>
       </div>
       <div class="menu-cta">
         <a class="btn btn-enquiry" href="forms/form.html">make enquiry</a>
         <a class="btn btn-view" href="#work">make enquiry</a>
-        <a class="btn btn-page" href="#skills">skills</a>
+        <a class="btn btn-page" href="#main">main</a>
       </div>
     </div>
   </section>
