new menu images

--- a/index.html
+++ b/index.html
@@ -153,8 +153,9 @@
   <section id="menu">
     <!-- RESPONSIVE -->
     <div class="menu-section" id="menu-1">
-      <div class="menu-img">
-        <img src="hero/peter-bo-faMPQuSe4Wo-unsplash.jpg" alt="Responsive devices">
+      <div class="menu-img devices">
+        <!-- <img src="hero/peter-bo-faMPQuSe4Wo-unsplash.jpg" alt="Responsive devices"> -->
+        <img src="hero/devices.png" alt="Responsive devices">
       </div>
       <div class="menu-title">
         <h2>responsive Web design</h2>
@@ -212,8 +213,9 @@
     </div>
     <!-- JAVASCRIPT MENU -->
     <div class="menu-section" id="menu-4">
-      <div class="menu-img">
-        <img src="img/walling-XLqiL-rz4V8-unsplash.jpg" alt="Responsive devices">
+      <div class="menu-img engage">
+        <!-- <img src="img/walling-XLqiL-rz4V8-unsplash.jpg" alt="Responsive devices"> -->
+        <img src="hero/access.png" alt="Responsive devices">
       </div>
       <div class="menu-title">
         <h2>Engaging</h2>
