--- a/index.html
+++ b/index.html
@@ -174,8 +174,9 @@
     </div>
     <!-- HTML 5 -->
     <div class="menu-section" id="menu-2">
-      <div class="menu-img">
-        <img src="img/howard-bouchevereau-RSCirJ70NDM-unsplash.jpg" alt="Responsive devices">
+      <div class="menu-img html">
+        <!-- <img src="img/howard-bouchevereau-RSCirJ70NDM-unsplash.jpg" alt="Responsive devices"> -->
+        <img src="hero/html.png" alt="Responsive devices">
       </div>
       <div class="menu-title">
         <h2>Web Accessibility</h2>
