new menu images

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     <div class="menu-section" id="menu-4">
       <div class="menu-img engage">
         <!-- <img src="img/walling-XLqiL-rz4V8-unsplash.jpg" alt="Responsive devices"> -->
-        <img src="hero/access.png" alt="Responsive devices">
+        <img src="hero/arrow.png" alt="Responsive devices">
       </div>
       <div class="menu-title">
         <h2>Engaging</h2>
