lazy loading images

--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
     <!-- RESPONSIVE -->
     <div class="menu-section" id="menu-1">
       <div class="menu-img devices">
-        <!-- <img src="hero/peter-bo-faMPQuSe4Wo-unsplash.jpg" alt="Responsive devices"> -->
-        <img src="hero/devices.png" alt="Responsive devices">
+        <!-- <img src="hero/peter-bo-faMPQuSe4Wo-unsplash.jpg" loading="lazy" alt="Responsive devices"> -->
+        <img src="hero/devices.png" loading="lazy" alt="Responsive devices">
       </div>
       <div class="menu-title">
         <h2>responsive Web design</h2>
@@ -176,7 +176,7 @@
     <div class="menu-section" id="menu-2">
       <div class="menu-img html">
         <!-- <img src="img/howard-bouchevereau-RSCirJ70NDM-unsplash.jpg" alt="Responsive devices"> -->
-        <img src="hero/html.png" alt="Responsive devices">
+        <img src="hero/access.png" loading="lazy" alt="Responsive devices">
       </div>
       <div class="menu-title">
         <h2>Web Accessibility</h2>
@@ -216,7 +216,7 @@
     <div class="menu-section" id="menu-4">
       <div class="menu-img engage">
         <!-- <img src="img/walling-XLqiL-rz4V8-unsplash.jpg" alt="Responsive devices"> -->
-        <img src="hero/arrow.png" alt="Responsive devices">
+        <img src="hero/arrow.png" loading="lazy" alt="Responsive devices">
       </div>
       <div class="menu-title">
         <h2>Engaging</h2>
