--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
     <!-- CSS MENU -->
     <div class="menu-section" id="menu-3">
       <div class="menu-img">
-        <img src="hero/ales-nesetril-Im7lZjxeLhg-unsplash.jpg" alt="Responsive devices">
+        <!-- <img src="hero/ales-nesetril-Im7lZjxeLhg-unsplash.jpg" alt="Responsive devices"> -->
+        <img src="hero/arrow.png" loading="lazy" alt="Responsive devices">
       </div>
       <div class="menu-title">
         <h2>Immersive</h2>
@@ -216,7 +217,7 @@
     <div class="menu-section" id="menu-4">
       <div class="menu-img engage">
         <!-- <img src="img/walling-XLqiL-rz4V8-unsplash.jpg" alt="Responsive devices"> -->
-        <img src="hero/arrow.png" loading="lazy" alt="Responsive devices">
+        <img src="hero/engage.png" loading="lazy" alt="Responsive devices">
       </div>
       <div class="menu-title">
         <h2>Engaging</h2>
