test: new hero h1

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
         <img src="img/massimiliano-morosinotto-STKcS9ojYHU-unsplash-min.jpg" loading="lazy" alt="">
       </div>
       <div id="hero-h1">
+        <!-- <h1>my name is boitumelo sempe <span>aka</span></h1> -->
         <h2>
           <span style="--s:1">My</span>
           <span style="--s:2">Name</span>
@@ -129,7 +130,7 @@
           <span style="--s:5">Sempe</span>
         </h2>
 
-        <h3 id="aka"><span>a.k.a</span></h3>
+        <h2 id="aka"><span>a.k.a</span></h2>
         <button href="#skills" type="button" title="Shakex Sempe: Web Developer" id="cta-header" class="scroll-link">
           <span style="--i:1;">s</span>
           <span style="--i:2;">h</span>
@@ -140,6 +141,7 @@
         </button>
       </div>
       <div class="slogan">
+        <p>front end web developer</p>
         <p>Accessible, Immersive & Engaging</p>
         <p><a href="#menu">responsive websites</a></p>
       </div>
