--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
       <div class="skills-top">
         <div class="skills-info">
           <p>
-            I'm a Front-End Web Developer focused on Responsive Web Design and User Experience.<br>
+            I'm a Front-End Web Developer focused on Responsive Web Design & User Experience.<br>
             I code webpages that are: <br>
             <span>Accessible</span> by using HTML5 semantic markup and SEO techniques.<br>
             <span>Immersive</span> through Sass preprocessed stylesheets and <br>
