--- a/index.html
+++ b/index.html
@@ -698,26 +698,14 @@
       </div>
       <div class="contact-items">
 
-        <article title="location" data-scroll class="contact-item">
-          <div class="icon">
-            <i class="fas fa-map-marked-alt"></i>
-          </div>
-          <h2>Address</h2>
-          <div class="contact-info">
-            <p>Mahikeng, North West.<span>South Africa</span></p>
-            <a href="https://goo.gl/maps/8XfqHABUeWN6oEjB6" title="view in google maps" target="_blank"><i
-                class="fas fa-map-pin"></i>..where?</a>
-          </div>
-        </article>
-
         <article title="email" data-scroll class="contact-item">
           <div class="icon">
             <i class="fas fa-envelope"></i>
           </div>
           <h2>Email</h2>
           <div class="contact-info">
-            <p>shakex@syntex.co.za</p>
-            <a href="mailto:shakex@syntex.co.za" title="Send Email to shakex@syntex.co.za"><i class="fas fa-at"></i>
+            <p>bshakex@gmail.com</p>
+            <a href="mailto:bshakex@gmail.com" title="Send Email to Shakex Sempe"><i class="fas fa-at"></i>
               ..email me</a>
           </div>
         </article>
@@ -733,8 +721,19 @@
           </div>
         </article>
 
+        <article title="location" data-scroll class="contact-item">
+          <div class="icon">
+            <i class="fas fa-map-marked-alt"></i>
+          </div>
+          <h2>Address</h2>
+          <div class="contact-info">
+            <p>Mahikeng, North West.<span>South Africa</span></p>
+            <a href="https://goo.gl/maps/8XfqHABUeWN6oEjB6" title="view in google maps" target="_blank"><i
+                class="fas fa-map-pin"></i>..where?</a>
+          </div>
+        </article>
 
-
+ 
       </div>
     </div>
     <!-- padding section -->
