menu-section new layout

--- a/index.html
+++ b/index.html
@@ -155,85 +155,65 @@
   <section id="menu">
     <!-- RESPONSIVE -->
     <div class="menu-section" id="menu-1">
-      <div class="menu-img devices">
-        <!-- <img src="hero/peter-bo-faMPQuSe4Wo-unsplash.jpg" loading="lazy" alt="Responsive devices"> -->
-        <img src="hero/devices.png" loading="lazy" alt="Responsive devices">
-      </div>
-      <div class="menu-title">
-        <h2>responsive Web design</h2>
-        <h3>HTML 5 & CSS 3 </h3>
+      <div class="menu-img">
+        <figure>
+          <img src="hero/devices.png" alt="Devices">
+        </figure>
       </div>
       <div class="menu-content">
-        <p>
-          Websites that look good on desktops, tablets, and phones.      
-        </p>
-      </div>
-      <div class="menu-cta">
-        <a class="btn btn-enquiry" href="forms/form.html">make enquiry</a>
-        <a class="btn btn-view" href="#work">make enquiry</a>
-        <a class="btn btn-page" href="#menu-2">CSS</a>
+        <div class="menu-title">
+          <h2>
+            responsive web design
+          </h2>
+          <p>html 5 & css 3</p>
+        </div>
+        <div class="menu-cta">
+          <a href="#" class="btn">contact</a>
+          <a href="#" class="btn">view</a>
+          <a href="menu-2" class="btn page-btn">next</a>
+        </div>
       </div>
     </div>
-    <!-- HTML 5 -->
+    <!-- IMMERSIVE -->
     <div class="menu-section" id="menu-2">
-      <div class="menu-img html">
-        <!-- <img src="img/howard-bouchevereau-RSCirJ70NDM-unsplash.jpg" alt="Responsive devices"> -->
-        <img src="hero/access.png" loading="lazy" alt="Responsive devices">
-      </div>
-      <div class="menu-title">
-        <h2>Web Accessibility</h2>
-        <h3>HTML 5 & SEO </h3>
+      <div class="menu-img">
+        <figure>
+          <img src="hero/arrow.png" alt="css3">
+        </figure>
       </div>
       <div class="menu-content">
-        <p>Semantic HTML 5 semantic markup and on-page SEO techniques      
-        </p>
-      </div>
-      <div class="menu-cta">
-        <a class="btn btn-enquiry" href="forms/form.html">make enquiry</a>
-        <a class="btn btn-view" href="#work">make enquiry</a>
-        <a class="btn btn-page" href="#menu-3">CSS</a>
+        <div class="menu-title">
+          <h2>
+            Immersive
+          </h2>
+          <p>sass preprocessed stylesheets</p>
+        </div>
+        <div class="menu-cta">
+          <a href="#" class="btn">contact</a>
+          <a href="#" class="btn">view</a>
+          <a href="menu-3" class="btn page-btn">next</a>
+        </div>
       </div>
     </div>
-    <!-- CSS MENU -->
+    <!-- ENGAGE -->
     <div class="menu-section" id="menu-3">
       <div class="menu-img">
-        <!-- <img src="hero/ales-nesetril-Im7lZjxeLhg-unsplash.jpg" alt="Responsive devices"> -->
-        <img src="hero/arrow.png" loading="lazy" alt="Responsive devices">
-      </div>
-      <div class="menu-title">
-        <h2>Immersive</h2>
-        <h3>SASS preprocessed CSS3</h3>
+        <figure>
+          <img src="hero/access.png" alt="javascript logo">
+        </figure>
       </div>
       <div class="menu-content">
-        <p>
-          CSS3 involves using the Box model, border-radiuses, box shadows, animations & transitions to render various layouts
-        </p>
-      </div>
-      <div class="menu-cta">
-        <a class="btn btn-enquiry" href="forms/form.html">make enquiry</a>
-        <a class="btn btn-view" href="#work">make enquiry</a>
-        <a class="btn btn-page" href="#menu-4">javascript</a>
-      </div>
-    </div>
-    <!-- JAVASCRIPT MENU -->
-    <div class="menu-section" id="menu-4">
-      <div class="menu-img engage">
-        <!-- <img src="img/walling-XLqiL-rz4V8-unsplash.jpg" alt="Responsive devices"> -->
-        <img src="hero/engage.png" loading="lazy" alt="Responsive devices">
-      </div>
-      <div class="menu-title">
-        <h2>Engaging</h2>
-        <h3>Javascript algorithms</h3>
-      </div>
-      <div class="menu-content">
-        <p>
-          Javascript allows us to make engaging pages by using Document Object Model uses the to dynamically access and update the content, structure, and style of a document.
-        </p>
-      </div>
-      <div class="menu-cta">
-        <a class="btn btn-enquiry" href="forms/form.html">make enquiry</a>
-        <a class="btn btn-view" href="#work">make enquiry</a>
-        <a class="btn btn-page" href="#main">main</a>
+        <div class="menu-title">
+          <h2>
+            engaging
+          </h2>
+          <p>javascript algorithms</p>
+        </div>
+        <div class="menu-cta">
+          <a href="#" class="btn">contact</a>
+          <a href="#" class="btn">view</a>
+          <a href="menu-3" class="btn page-btn">next</a>
+        </div>
       </div>
     </div>
   </section>
