--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </button>
       </div>
       <div class="slogan">
-        <p>front end web developer</p>
+        <p>front-end web developer : </p>
         <p>Accessible, Immersive & Engaging</p>
         <p><a href="#menu">responsive websites</a></p>
       </div>
