--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         </h2>
 
         <h2 id="aka"><span>a.k.a</span></h2>
-        <button href="#skills" type="button" title="Shakex Sempe: Web Developer" id="cta-header" class="scroll-link">
+        <button href="#menu" type="button" title="Shakex Sempe: Web Developer" id="cta-header" class="scroll-link">
           <span style="--i:1;">s</span>
           <span style="--i:2;">h</span>
           <span style="--i:3;">a</span>
@@ -141,7 +141,7 @@
         </button>
       </div>
       <div class="slogan">
-        <p>front-end web developer : </p>
+        <p>web developer : </p>
         <p>Accessible, Immersive & Engaging</p>
         <p><a href="#menu">responsive websites</a></p>
       </div>
