--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
         </h2>
 
         <h2 id="aka"><span>a.k.a</span></h2>
-        <button href="#menu" type="button" title="Shakex Sempe: Web Developer" id="cta-header" class="scroll-link">
+        <a href="#menu" type="button" title="Shakex Sempe: Web Developer" id="cta-header" class="scroll-link">
           <span style="--i:1;">s</span>
           <span style="--i:2;">h</span>
           <span style="--i:3;">a</span>
           <span style="--i:4;">k</span>
           <span style="--i:5;">e</span>
           <span style="--i:6;">x</span>
-        </button>
+        </a>
       </div>
       <div class="slogan">
         <p>web developer : </p>
