--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <h2>
             responsive web design
           </h2>
-          <p>html 5 & css 3</p>
+          <p>Webpages that look good on all devices.</p>
         </div>
         <div class="menu-cta">
           <a href="#" class="btn">contact</a>
@@ -184,9 +184,9 @@
       <div class="menu-content">
         <div class="menu-title">
           <h2>
-            Immersive
+            Immersive user Interface
           </h2>
-          <p>sass preprocessed stylesheets</p>
+          <p>Eye catching & satisfying user experience</p>
         </div>
         <div class="menu-cta">
           <a href="#" class="btn">contact</a>
@@ -205,9 +205,9 @@
       <div class="menu-content">
         <div class="menu-title">
           <h2>
-            engaging
+            engaging user experience
           </h2>
-          <p>javascript algorithms</p>
+          <p>Dynamic & responisve interfaces</p>
         </div>
         <div class="menu-cta">
           <a href="#" class="btn">contact</a>
