--- a/index.html
+++ b/index.html
@@ -155,13 +155,13 @@
   <section id="menu">
     <!-- RESPONSIVE -->
     <div class="menu-section" id="menu-1">
-      <div class="menu-img">
+      <div class="menu-img io-item">
         <figure>
           <img src="hero/devices.png" alt="Devices">
         </figure>
       </div>
       <div class="menu-content">
-        <div class="menu-title">
+        <div class="menu-title io-item">
           <h2>
             responsive web design
           </h2>
@@ -176,13 +176,13 @@
     </div>
     <!-- IMMERSIVE -->
     <div class="menu-section" id="menu-2">
-      <div class="menu-img">
+      <div class="menu-img io-item">
         <figure>
           <img src="hero/arrow.png" alt="css3">
         </figure>
       </div>
       <div class="menu-content">
-        <div class="menu-title">
+        <div class="menu-title io-item">
           <h2>
             Immersive user Interface
           </h2>
@@ -197,13 +197,13 @@
     </div>
     <!-- ENGAGE -->
     <div class="menu-section" id="menu-3">
-      <div class="menu-img">
+      <div class="menu-img io-item">
         <figure>
           <img src="hero/access.png" alt="javascript logo">
         </figure>
       </div>
       <div class="menu-content">
-        <div class="menu-title">
+        <div class="menu-title io-item">
           <h2>
             engaging user experience
           </h2>
