deskop links and logo IO

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
           </p>
         </div>
         <div class="skills-drop">
-          <p class="skills-drop-p">View my full skill set in the dropdown section below.</p>
+          <p class="skills-drop-p">View my full  Web Development skill set in the dropdown section below.</p>
         </div>
       </div>
       <!--Dropdown-->
