--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <div class="menu-cta">
           <a href="#" class="btn">contact</a>
           <a href="#" class="btn">view</a>
-          <a href="#menu-2" class="btn page-btn">next</a>
+          <a href="#menu-2" class="page-btn">next</a>
         </div>
       </div>
     </div>
@@ -191,7 +191,7 @@
         <div class="menu-cta">
           <a href="#" class="btn">contact</a>
           <a href="#" class="btn">view</a>
-          <a href="#menu-3" class="btn page-btn">next</a>
+          <a href="#menu-3" class="page-btn">next</a>
         </div>
       </div>
     </div>
@@ -212,7 +212,7 @@
         <div class="menu-cta">
           <a href="#" class="btn">contact</a>
           <a href="#" class="btn">view</a>
-          <a href="#skills" class="btn page-btn">next</a>
+          <a href="#skills" class="page-btn">next</a>
         </div>
       </div>
     </div>
