--- a/index.html
+++ b/index.html
@@ -177,12 +177,12 @@
     <!-- IMMERSIVE -->
     <div class="menu-section" id="menu-2">
       <div class="menu-img io-item">
-        <figure>
+        <figure class="fig fig-js">
           <img src="hero/arrow.png" alt="css3">
         </figure>
       </div>
       <div class="menu-content">
-        <div class="menu-title io-item">
+        <div class="menu-title io-item title-js">
           <h2>
             Immersive user Interface
           </h2>
