text transform cta and header

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
         <h2 id="aka"><span>a.k.a</span></h2>
         <a href="#menu" type="button" title="Shakex Sempe: Web Developer" id="cta-header" class="scroll-link">
-          <span style="--i:1;">s</span>
+          <span style="--i:1;">S</span>
           <span style="--i:2;">h</span>
           <span style="--i:3;">a</span>
           <span style="--i:4;">k</span>
