reposive menu section fig aniamtion

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <!-- RESPONSIVE -->
     <div class="menu-section" id="menu-1">
       <div class="menu-img io-item">
-        <figure>
+        <figure class="fig fig-response">
           <img src="hero/devices.png" alt="Devices">
         </figure>
       </div>
@@ -177,7 +177,7 @@
     <!-- IMMERSIVE -->
     <div class="menu-section" id="menu-2">
       <div class="menu-img io-item">
-        <figure>
+        <figure class="fig fig-css">
           <img src="hero/access.png" alt="javascript logo">
         </figure>
       </div>
