--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- META THEME COLOR -->
   <meta name="theme-color" content="#29323c" />
   <!-- META OG IMAGE -->
-  <meta name="image" property="og:image" content="https://shakexsempe.netlify.app/img/shakex-logo-min.png">
+  <meta name="image" property="og:image" content="https://shakexsempe.netlify.app/img/shakex-sempe-logo.png">
 
   <!-- TITLE -->
   <title>Shakex Sempe - Front End Developer - Personal Portfolio Page</title>
@@ -116,6 +116,7 @@
   <section id="home" class="section welcome-section">
     <div class="hero container">
       <div class="hero-bg">
+        <!-- <img src="img/massimiliano-morosinotto-STKcS9ojYHU-unsplash-min.jpg" loading="lazy" alt=""> -->
         <img src="img/massimiliano-morosinotto-STKcS9ojYHU-unsplash-min.jpg" loading="lazy" alt="">
       </div>
       <div id="hero-h1">
