--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
       </div>
       <div class="slogan">
         <p>web developer : </p>
-        <p>Accessible, Immersive & Engaging</p>
-        <p><a href="#menu">responsive websites</a></p>
+        <p>responsive, Immersive & Engaging</p>
+        <p><a href="#menu">Landing pages & websites</a></p>
       </div>
     </div>
     <!-- <div id="cta">
