--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       <div class="slogan">
         <p>web developer : </p>
         <p>responsive, Immersive & Engaging</p>
-        <p><a href="#menu">Landing pages & websites</a></p>
+        <p><a href="#menu">websites & Landing pages</a></p>
       </div>
     </div>
     <!-- <div id="cta">
