--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
 </head>
 
 <body>
+  <!-- LOADER -->
+  <div class="loader_bg">
+    <div class="loader"></div>
+  </div>
   <!--Header-->
   <header id="header">
     <div class="header">
@@ -840,6 +844,13 @@
 </main>
   
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+  <script>
+    setTimeout(function(){
+      $('.loader_bg').fadeToggle();
+    }, 4000);
+  </script>
   <script src="js/app.js"></script>
   <script src="js/projects.js"></script>
   <script src="https://unpkg.com/scroll-out/dist/scroll-out.min.js"></script>
