--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 <body>
   <!-- LOADER -->
   <div class="loader_bg">
-    <div class="loader"></div>
+    <div class="loader">
+      <p>Welcome! loading page...</p>
+    </div>
   </div>
   <!--Header-->
   <header id="header">
@@ -845,7 +847,7 @@
   
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
+<!-- PRELOADER SCRIPT -->
   <script>
     setTimeout(function(){
       $('.loader_bg').fadeToggle();
