test: mobile hero bg and #h1 transiton timing

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <!-- LOADER -->
   <div class="loader_bg">
     <div class="loader">
-      <p>Welcome! loading page...</p>
+      <p>Welcome!...</p>
     </div>
   </div>
   <!--Header-->
