--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 
 <body>
   <!-- LOADER -->
-  <div class="loader_bg">
+  <!-- <div class="loader_bg">
     <div class="loader">
       <p>Welcome!...</p>
     </div>
-  </div>
+  </div> -->
   <!--Header-->
   <header id="header">
     <div class="header">
@@ -528,6 +528,7 @@
             </a>
           </figure>
           <a class="view-site-btn" href="https://ksauce.netlify.app/" target="_blank">view website</a>
+          <a class="view-repo-btn" href="https://github.com/ShakexSempe/kutlwano-hot-sauce" target="_blank">view repository</a>
         </div>
         <!-- ORICH -->
         <div data-scroll class="work-item">
@@ -541,6 +542,7 @@
           </a>
           </figure>
           <a class="view-site-btn" href="https://orich-trading-projects.netlify.app/" target="_blank">view website</a>
+          <a class="view-repo-btn" href="https://github.com/ShakexSempe/orich-trading" target="_blank">view repository</a>
         </div>
         <!-- MUNCH UP -->
         <div data-scroll class="work-item">
@@ -554,6 +556,7 @@
           </a>
           </figure>
           <a class="view-site-btn" href="https://munch-up.netlify.app/" target="_blank">view website</a>
+          <a class="view-repo-btn" href="https://github.com/ShakexSempe/munch-up" target="_blank">view repository</a>
         </div>
         <!-- MAGOVENI -->
         <div data-scroll class="work-item">
@@ -567,6 +570,7 @@
             </a>
           </figure>
           <a class="view-site-btn" href="https://ngoveni-construction.netlify.app/" target="_blank">view website</a>
+          <a class="view-repo-btn" href="https://github.com/ShakexSempe/ngoveni-construction" target="_blank">view repository</a>       
         </div>
         <!-- THATO -->
         <div data-scroll class="work-item">
@@ -580,6 +584,7 @@
             </a>
           </figure>
           <a class="view-site-btn" href="https://thato-technical-drawings.netlify.app/" target="_blank">view website</a>
+          <a class="view-repo-btn" href="https://github.com/ShakexSempe/thato-tech-drawings" target="_blank">view repository</a>
         </div>
         <!-- WORDPRESS -->
         <!-- <div data-scroll class="work-item">
@@ -848,11 +853,11 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <!-- PRELOADER SCRIPT -->
-  <script>
+  <!-- <script>
     setTimeout(function(){
       $('.loader_bg').fadeToggle();
     }, 5000);
-  </script>
+  </script> -->
   <script src="js/app.js"></script>
   <script src="js/projects.js"></script>
   <script src="https://unpkg.com/scroll-out/dist/scroll-out.min.js"></script>
