--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 
 <body>
   <!-- LOADER -->
-  <!-- <div class="loader_bg">
+  <div class="loader_bg">
     <div class="loader">
       <p>Welcome!...</p>
     </div>
-  </div> -->
+  </div>
   <!--Header-->
   <header id="header">
     <div class="header">
@@ -853,11 +853,11 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <!-- PRELOADER SCRIPT -->
-  <!-- <script>
+  <script>
     setTimeout(function(){
       $('.loader_bg').fadeToggle();
-    }, 5000);
-  </script> -->
+    }, 6000);
+  </script>
   <script src="js/app.js"></script>
   <script src="js/projects.js"></script>
   <script src="https://unpkg.com/scroll-out/dist/scroll-out.min.js"></script>
