--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 
 <body>
   <!-- LOADER -->
-  <div class="loader_bg">
+  <!-- <div class="loader_bg">
     <div class="loader">
       <p>Welcome!</p>
     </div>
-  </div>
+  </div> -->
   <!--Header-->
   <header id="header">
     <div class="header">
@@ -106,6 +106,11 @@
               </li>
 
             </ul>
+            <div class="contact-links">
+              <a href="tel:+27716876941"><i class="fa-brands fa-whatsapp"></i>+27716876941</a>
+              <a href="mailto:bshakex@gmail.com"><i class="fa-solid fa-envelope"></i>bshakex@gmail.com</a>
+              <a href="tel:0726005104"><i class="fa-solid fa-phone"></i>0726005104</a>
+            </div>
           </div>
         </div>
       </nav>
@@ -835,13 +840,13 @@
   <script src="js/app.js"></script>
   <script src="js/projects.js"></script>
   <script src="https://unpkg.com/scroll-out/dist/scroll-out.min.js"></script>
-  <script>
+  <!-- <script>
     ScrollOut({
       onShown(el) {
         el.classList.add("animated");
       }
     });
-  </script>
+  </script> -->
 </body>
 
 </html>
