header media query

--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
 
             </ul>
             <div class="contact-links">
-              <a href="tel:+27716876941"><i class="fa-brands fa-whatsapp"></i>+27716876941</a>
-              <a href="mailto:bshakex@gmail.com"><i class="fa-solid fa-envelope"></i>bshakex@gmail.com</a>
-              <a href="tel:0726005104"><i class="fa-solid fa-phone"></i>0726005104</a>
+              <a title="Whatsapp number" href="tel:+27716876941"><i class="fa-brands fa-whatsapp"></i>+27716876941</a>
+              <a title="Email Address" href="mailto:bshakex@gmail.com"><i class="fa-solid fa-envelope"></i>bshakex@gmail.com</a>
+              <a title="Phone number" href="tel:0726005104"><i class="fa-solid fa-phone"></i>0726005104</a>
             </div>
           </div>
         </div>
